--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.11",
     "lucide-react": "^0.479.0",
+    "next-themes": "^0.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.3",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.12",
     "tailwindcss-animate": "^1.0.7",
