--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "framer-motion": "^12.4.11",
     "lucide-react": "^0.479.0",
     "next-themes": "^0.4.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.3",
     "socket.io-client": "^4.8.1",
