--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.4.11",
     "lucide-react": "^0.479.0",
-    "next-themes": "^0.4.5",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "next-themes": "^0.4.6",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.3",
     "socket.io-client": "^4.8.1",
@@ -53,7 +53,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "typescript": "~5.7.2",
+    "typescript": "^5.8.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
   }
